MAJ 07/08/203 - Connection OK + menu en cours

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -1,2 +1,42 @@
-defaultpage.title = tire
-defaultpage.content = content
+/*---Default---*/
+defaultpage.title = Sym022
+defaultpage.content = Contenu
+home.title = Home
+welcomeonyourpage = Welcome
+
+/*---Connection-Page---*/
+connectionpage.title = Connection
+connectionpage.error.message = The Username and/or the password entered are invalid
+connectionpage.username.title = Username
+connectionpage.username.placeholder = Please enter your Username
+connectionpage.password.title = Password
+connectionpage.password.placeholder = Please enter your password
+connectionpage.submit.button = Connect
+connectionpage.return.button = Return
+
+/*---Header---*/
+header.language = Language
+header.language.fr = French
+header.language.en = English
+
+/*---Footer---*/
+footer.copyright = Sym022©2023 Website maked by DEBETANCOURT Daphné and DEVOGELAERE Thomas.
+
+/*---Menu---*/
+menu.data.DM = Data Manager menu
+menu.data.site = Sites menu
+menu.data.site.add = Add a Site
+menu.data.site.consult = Liste of sites
+menu.data.users = Users
+menu.data.users.add = Add a user
+menu.data.users.consult = List of utilisateurs
+menu.data.usersSite.add = Create a list of sites for a user
+menu.data.usersSite.consult = List of users and related sites
+menu.data.role = Roles and permissions
+menu.data.role.add = Add a role
+menu.data.role.consult = List of roles
+menu.data.rolePermission.add = Create a list of permissions for a role
+menu.data.rolePermission.modify = List of roles and related permissions
+
+/*---Err-Message---*/
+ConnectionPage.errorMessageLogin = The username cannot be empty and have a minimum of 2 digits
