--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -1,2 +1,42 @@
-defaultpage.title = tireee
-defaultpage.content = contentzzzzzz
+/*---Default---*/
+defaultpage.title = Sym022
+defaultpage.content = Contenu
+home.title = Accueil
+welcomeonyourpage = Bienvenue
+
+/*---Connection-Page---*/
+connectionpage.title = Connexion
+connectionpage.error.message = Le nom d'utilisateur et/ou le mot de passe encodés ne sont pas corrects
+connectionpage.username.title = Nom d'utilisateur
+connectionpage.username.placeholder = Entrez votre nom d'utilisateur
+connectionpage.password.title = Mot de passe
+connectionpage.password.placeholder = Entrez votre mot de passe
+connectionpage.submit.button = Connexion
+connectionpage.return.button = Return
+
+/*---Header---*/
+header.language = Language
+header.language.fr = French
+header.language.en = English
+
+/*---Footer---*/
+footer.copyright = Sym022©2023 sîte conçu par DEBETANCOURT Daphné et DEVOGELAERE Thomas.
+
+/*---Menu---*/
+menu.data.DM = Data Manager
+menu.data.site = Sites
+menu.data.site.add = Ajouter un site
+menu.data.site.consult = Liste des sites
+menu.data.users = Utilisateurs
+menu.data.users.add = Ajouter un utilisateur
+menu.data.users.consult = Liste des utilisateurs
+menu.data.usersSite.add = Attribuer des sites à un utilisateur
+menu.data.usersSite.consult = Liste des utilisateurs et leurs sites
+menu.data.role = Rôles et permissions
+menu.data.role.add = Ajouter un rôle
+menu.data.role.consult = Liste des rôles
+menu.data.rolePermission.add = Attribuer des permissions à un rôle
+menu.data.rolePermission.modify = Liste des rôles et leurs permissions
+
+/*---Err-Message---*/
+ConnectionPage.errorMessageLogin = Le nom d'utilisateur ne peut être vide et doit contenir un minimum de 2 caractères
