MAJ 08/08/23 Gestion des sites

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -3,6 +3,7 @@ defaultpage.title = Sym022
 defaultpage.content = Contenu
 home.title = Home
 welcomeonyourpage = Welcome
+logo.title = SYM022
 
 /*---Connection-Page---*/
 connectionpage.title = Connection
@@ -38,5 +39,38 @@ menu.data.role.consult = List of roles
 menu.data.rolePermission.add = Create a list of permissions for a role
 menu.data.rolePermission.modify = List of roles and related permissions
 
+/*---Filter---*/
+listPage.messageErrorResearch = Research need to be less than 60 character and without special character
+listPage.filter = Enter your search term
+
 /*---Err-Message---*/
 ConnectionPage.errorMessageLogin = The username cannot be empty and have a minimum of 2 digits
+
+/*---Popup---*/
+site = The site
+add = has been created
+update = has been updated
+
+/*---AddSite---*/
+sitePage.addSiteTitle = Create a hospital site
+sitePage.addSite = Create a hospital site
+sitePage.siteNum = Hospital site number
+sitePage.siteNum.placeHolder = Enter a Hospital site number
+sitePage.siteNum.errorMessage = The hospital site number is between 1 and 999999
+messageErrorSiteNum = The hospital site number entered already exists in the database
+sitePage.siteName = Name of hospital site
+sitePage.siteName.placeHolder = Enter the name of hospital site
+sitePage.siteName.errorMessage = The name of hospital site cannot be empty and have a minimum of 2 digits
+sitePage.piName = Name of investigator
+sitePage.piName.placeHolder = Enter the name of investigator
+sitePage.piName.errorMessage = The name of investigator cannot be empty and have a minimum of 2 digits
+sitePage.addSite.create = Create the hospital site
+sitePage.update =  Update the hospital site
+
+/*---ListOfSites---*/
+sitePage.ListOfSites = List of hospital sites
+action = Action
+sitePage.ListOfSites.modify = Update the hospital site
+sitePage.status = Status
+sitePage.Active = Active
+sitePage.Inactive = Inactive
