--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -3,6 +3,7 @@ defaultpage.title = Sym022
 defaultpage.content = Contenu
 home.title = Accueil
 welcomeonyourpage = Bienvenue
+logo.title = SYM022
 
 /*---Connection-Page---*/
 connectionpage.title = Connexion
@@ -12,7 +13,7 @@ connectionpage.username.placeholder = Entrez votre nom d'utilisateur
 connectionpage.password.title = Mot de passe
 connectionpage.password.placeholder = Entrez votre mot de passe
 connectionpage.submit.button = Connexion
-connectionpage.return.button = Return
+connectionpage.return.button = Retour
 
 /*---Header---*/
 header.language = Language
@@ -38,5 +39,38 @@ menu.data.role.consult = Liste des rôles
 menu.data.rolePermission.add = Attribuer des permissions à un rôle
 menu.data.rolePermission.modify = Liste des rôles et leurs permissions
 
+/*---Filter---*/
+listPage.messageErrorResearch = La recherche doit faire moins de 60 caractères et ne pas contenir de caractères spéciaux
+listPage.filter = Entrez votre terme de recherche
+
 /*---Err-Message---*/
 ConnectionPage.errorMessageLogin = Le nom d'utilisateur ne peut être vide et doit contenir un minimum de 2 caractères
+
+/*---Popup---*/
+site = Le site
+add = a bien été crée
+update = a bien été mis à jour
+
+/*---AddSite---*/
+sitePage.addSiteTitle = Créer un site hospitalier
+sitePage.addSite = Créer un site hospitalier
+sitePage.siteNum = Numéro du site hospitalier
+sitePage.siteNum.placeHolder = Entrer le numéro du site hospitalier
+sitePage.siteNum.errorMessage = Le numéro de site hospitalier est compris entre 1 et 999999
+messageErrorSiteNum = Le numéro de site hospitalier entré existe déjà dans la base de données
+sitePage.siteName = Nom du site hospitalier
+sitePage.siteName.placeHolder = Entrer le nom du site hospitalier
+sitePage.siteName.errorMessage = Le nom du site hospitalier doit contenir au moins 2 caractères
+sitePage.piName = Nom de l'investigateur
+sitePage.piName.placeHolder = Entrer le nom de l'investigateur
+sitePage.piName.errorMessage = Le nom de l'investigateur doit comprendre au moins 2 caractères
+sitePage.addSite.create = Créer le site hospitalier
+sitePage.update = Mettre à jour le site hospitalier
+
+/*---ListOfSites---*/
+sitePage.ListOfSites = Liste des sites hospitaliers
+action = Action
+sitePage.ListOfSites.modify = Mettre à jour le site hospitalier
+sitePage.status = Statut
+sitePage.Active = Actif
+sitePage.Inactive = Inactif
