MAJ 10/08 User OK + Role OK + PermissionBean OK + RolePermission En cours

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -48,22 +48,24 @@ ConnectionPage.errorMessageLogin = The username cannot be empty and have a minim
 
 /*---Popup---*/
 site = The site
+user = The user
+role = The role
 add = has been created
 update = has been updated
 
-/*---AddSite---*/
+/*---Site---*/
 sitePage.addSiteTitle = Create a hospital site
 sitePage.addSite = Create a hospital site
 sitePage.siteNum = Hospital site number
-sitePage.siteNum.placeHolder = Enter a Hospital site number
+sitePage.siteNum.placeHolder = The hospital site number is between 1 and 999999
 sitePage.siteNum.errorMessage = The hospital site number is between 1 and 999999
 messageErrorSiteNum = The hospital site number entered already exists in the database
 sitePage.siteName = Name of hospital site
-sitePage.siteName.placeHolder = Enter the name of hospital site
-sitePage.siteName.errorMessage = The name of hospital site cannot be empty and have a minimum of 2 digits
+sitePage.siteName.placeHolder = The name of hospital site cannot be empty and have a minimum of 2 digits and not contain a number
+sitePage.siteName.errorMessage = The name of hospital site cannot be empty and have a minimum of 2 digits and not contain a number
 sitePage.piName = Name of investigator
-sitePage.piName.placeHolder = Enter the name of investigator
-sitePage.piName.errorMessage = The name of investigator cannot be empty and have a minimum of 2 digits
+sitePage.piName.placeHolder = The name of investigator cannot be empty and have a minimum of 2 digits and not contain a number
+sitePage.piName.errorMessage = The name of investigator cannot be empty and have a minimum of 2 digits and not contain a number
 sitePage.addSite.create = Create the hospital site
 sitePage.update =  Update the hospital site
 
@@ -74,3 +76,41 @@ sitePage.ListOfSites.modify = Update the hospital site
 sitePage.status = Status
 sitePage.Active = Active
 sitePage.Inactive = Inactive
+
+/*---User---*/
+userPage.addUserTitle = Create a user
+userPage.addUser = Create a user
+userPage.lastName = Last name
+userPage.lastName.placeHolder = The name of user cannot be empty and have a minimum of 2 digits and not contain a number
+userPage.lastName.errorMessage = The name of user cannot be empty and have a minimum of 2 digits and not contain a number
+userPage.firstName = First name
+userPage.firstName.placeHolder = The first name of user cannot be empty and have a minimum of 2 digits and not contain a number
+userPage.firstName.errorMessage = The first name of user cannot be empty and have a minimum of 2 digits and not contain a number
+userPage.username = Username
+userPage.username.placeHolder = The username of user cannot be empty and have a minimum of 2 digits
+userPage.username.errorMessage = The username of user cannot be empty and have a minimum of 2 digits
+messageErrorUserName = The username entered already exists in the database
+userPage.mail = Email address
+userPage.mail.placeHolder = The email address must be like XXX@XXX.XXX
+userPage.mail.errorMessage = The email address must be like XXX@XXX.XXX
+userPage.Password = Password
+userPage.password.placeholder = The password must contain a minimum of 8 characters with a UpperCase Letter, a special character and a number
+userPage.Password.errorMessage = The password must contain a minimum of 8 characters with a UpperCase Letter, a special character and a number
+userPage.role = Role 
+userPage.role.select = Select a Role
+userPage.addUser.create = Create a user
+userPage.addUser.update = Update the user
+userPage.ListOfUsers = List of users
+
+/*---Role---*/
+rolePage.addRoleTitle = Create a role
+rolePage.addRole = Create a role
+rolePage.roleLabel = Name of the role
+rolePage.roleLabel.placeholder = the name of the role must have a minimum of 2 characters
+rolePage.roleLabel.errorMessage = the name of the role must have a minimum of 2 characters
+messageErrorRoleName = The name of the entered already exists in the database
+application.create.role = Create a role
+rolePage.updateRoleTitle = Update a role
+application.update.role = Update a role
+rolePage.role.modify = Update a role
+rolePage.ListOfRoles = List of roles
