--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -48,22 +48,24 @@ ConnectionPage.errorMessageLogin = Le nom d'utilisateur ne peut être vide et doi
 
 /*---Popup---*/
 site = Le site
-add = a bien été crée
+user = L'utilisateur
+role = Le rôle
+add = a bien été créé
 update = a bien été mis à jour
 
-/*---AddSite---*/
+/*---Site---*/
 sitePage.addSiteTitle = Créer un site hospitalier
 sitePage.addSite = Créer un site hospitalier
 sitePage.siteNum = Numéro du site hospitalier
-sitePage.siteNum.placeHolder = Entrer le numéro du site hospitalier
+sitePage.siteNum.placeHolder = Le numéro de site hospitalier est compris entre 1 et 999999
 sitePage.siteNum.errorMessage = Le numéro de site hospitalier est compris entre 1 et 999999
 messageErrorSiteNum = Le numéro de site hospitalier entré existe déjà dans la base de données
 sitePage.siteName = Nom du site hospitalier
-sitePage.siteName.placeHolder = Entrer le nom du site hospitalier
-sitePage.siteName.errorMessage = Le nom du site hospitalier doit contenir au moins 2 caractères
+sitePage.siteName.placeHolder = Le nom du site hospitalier doit contenir au moins 2 caractères et ne pas contenir de chiffres
+sitePage.siteName.errorMessage = Le nom du site hospitalier doit contenir au moins 2 caractères et ne pas contenir de chiffres
 sitePage.piName = Nom de l'investigateur
-sitePage.piName.placeHolder = Entrer le nom de l'investigateur
-sitePage.piName.errorMessage = Le nom de l'investigateur doit comprendre au moins 2 caractères
+sitePage.piName.placeHolder = Le nom de l'investigateur doit comprendre au moins 2 caractères et ne pas contenir de chiffres
+sitePage.piName.errorMessage = Le nom de l'investigateur doit comprendre au moins 2 caractères et ne pas contenir de chiffres
 sitePage.addSite.create = Créer le site hospitalier
 sitePage.update = Mettre à jour le site hospitalier
 
@@ -74,3 +76,41 @@ sitePage.ListOfSites.modify = Mettre à jour le site hospitalier
 sitePage.status = Statut
 sitePage.Active = Actif
 sitePage.Inactive = Inactif
+
+/*---User---*/
+userPage.addUserTitle = Créer un utilisateur
+userPage.addUser = Créer un utilisateur
+userPage.lastName = Nom
+userPage.lastName.placeHolder = Le nom de famille de l'utilisateur doit contenir au moins 2 caractères et ne pas contenir de chiffre
+userPage.lastName.errorMessage = Le nom de famille de l'utilisateur doit contenir au moins 2 caractères et ne pas contenir de chiffre
+userPage.firstName = Prénom
+userPage.firstName.placeHolder = Le prénom de l'utilisateur doit contenir au moins 2 caractères et ne pas contenir de chiffre
+userPage.firstName.errorMessage = Le prénom de l'utilisateur doit contenir au moins 2 caractères et ne pas contenir de chiffre
+userPage.username = Nom d'utilisateur
+userPage.username.placeHolder = Le nom de l'utilisateur doit contenir au moins 2 caractères
+userPage.username.errorMessage = Le nom de l'utilisateur doit contenir au moins 2 caractères
+messageErrorUserName = Le nom d'utilisateur entré existe déjà dans la base de données
+userPage.mail = Mail
+userPage.mail.placeHolder = Le mail doit respecter le format suivant XXX@XXX.XXX
+userPage.mail.errorMessage = Le mail doit respecter le format suivant XXX@XXX.XXX
+userPage.Password = Mot de passe
+userPage.password.placeholder = Le mot de passe doit contenir au minimum 8 caractères (1 Majuscule, 1 chiffre et un caractère spécial)
+userPage.Password.errorMessage = Le mot de passe doit contenir au minimum 8 caractères (1 Majuscule, 1 chiffre et un caractère spécial)
+userPage.role = Rôle
+userPage.role.select = Sélectionner un Rôle
+userPage.addUser.create = Créer un utilisateur
+userPage.addUser.update = Mettre à jour l'utilisateur
+userPage.ListOfUsers = Liste des utilisateurs
+
+/*---Role---*/
+rolePage.addRoleTitle = Créer un rôle
+rolePage.addRole = Créer un rôle
+rolePage.roleLabel = Nom du rôle
+rolePage.roleLabel.placeholder = Le nom du rôle ne peut être vide et doit contenir au moins 2 caractères
+rolePage.roleLabel.errorMessage = Le nom du rôle ne peut être vide et doit contenir au moins 2 caractères
+messageErrorRoleName = Le nom du rôle entré existe déjà dans la base de données
+application.create.role = Créer un rôle
+rolePage.updateRoleTitle = Mettre à jour un rôle
+application.update.role = Mettre à jour un rôle
+rolePage.role.modify = Mettre à jour le rôle
+rolePage.ListOfRoles = Liste des rôles
