MAJ 11/08 Role Permission OK

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -50,6 +50,7 @@ ConnectionPage.errorMessageLogin = The username cannot be empty and have a minim
 site = The site
 user = The user
 role = The role
+listOfPermissionsOf = The list of permissions
 add = has been created
 update = has been updated
 
@@ -114,3 +115,9 @@ rolePage.updateRoleTitle = Update a role
 application.update.role = Update a role
 rolePage.role.modify = Update a role
 rolePage.ListOfRoles = List of roles
+
+/*---Role Permission---*/
+add.rolePermission = Create a list of permissions for a role
+select.role = Select a role
+select.permission = Select the permission(s)
+update.rolePermission = Update the list of permissions for a role
