--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -50,6 +50,7 @@ ConnectionPage.errorMessageLogin = Le nom d'utilisateur ne peut être vide et doi
 site = Le site
 user = L'utilisateur
 role = Le rôle
+listOfPermissionsOf = La liste des permissions
 add = a bien été créé
 update = a bien été mis à jour
 
@@ -114,3 +115,9 @@ rolePage.updateRoleTitle = Mettre à jour un rôle
 application.update.role = Mettre à jour un rôle
 rolePage.role.modify = Mettre à jour le rôle
 rolePage.ListOfRoles = Liste des rôles
+
+/*---Role Permission---*/
+add.rolePermission = Créer la liste des permissions pour un rôle
+select.role = Sélectionner un rôle
+select.permission = Sélectionner la/les permission(s)
+update.rolePermission = Mettre à jour la liste des permissions pour un rôle
