MAJ 13/08 UserSite : Bean Ok + AddUserSite.xhtml en cours

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -51,6 +51,7 @@ site = The site
 user = The user
 role = The role
 listOfPermissionsOf = The list of permissions
+listOfSites = The list of sites
 add = has been created
 update = has been updated
 
