--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -51,6 +51,7 @@ site = Le site
 user = L'utilisateur
 role = Le rôle
 listOfPermissionsOf = La liste des permissions
+listOfSites = La liste des sites
 add = a bien été créé
 update = a bien été mis à jour
 
