MAJ 20/08 DOV OK avec audittrail

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -38,6 +38,13 @@ menu.data.role.add = Add a role
 menu.data.role.consult = List of roles
 menu.data.rolePermission.add = Create a list of permissions for a role
 menu.data.rolePermission.modify = List of roles and related permissions
+menu.subject = Subjects
+menu.data.subject = Subjects menu
+menu.data.subject.add = Add a subject
+menu.data.subject.consult = List of subjects
+menu.data.event = Events menu
+menu.data.event.add = Add an event
+menu.data.event.consult = List of events
 
 /*---Filter---*/
 listPage.messageErrorResearch = Research need to be less than 60 character and without special character
@@ -52,6 +59,7 @@ user = The user
 role = The role
 listOfPermissionsOf = The list of permissions
 listOfSites = The list of sites
+subject =  The subject
 add = has been created
 update = has been updated
 
@@ -75,7 +83,7 @@ sitePage.update =  Update the hospital site
 sitePage.ListOfSites = List of hospital sites
 action = Action
 sitePage.ListOfSites.modify = Update the hospital site
-sitePage.status = Status
+sitePage.status = Status 
 sitePage.Active = Active
 sitePage.Inactive = Inactive
 
@@ -122,3 +130,44 @@ add.rolePermission = Create a list of permissions for a role
 select.role = Select a role
 select.permission = Select the permission(s)
 update.rolePermission = Update the list of permissions for a role
+
+/*---User Site---*/
+add.userSite = Create a list of sites for a user
+select.user = Select a user 
+select.userName = Select a username 
+select.lastName = Select a lastname 
+select.firstName = Select a firstname 
+select.site = Select a hospital site 
+select.siteNum = Select a number of hospital site 
+select.siteName = Select a name of hospital site 
+update.userSitePage = Update the list of sites for a user 
+
+/*---Subject---*/
+subjectPage.addSubject = Create a subject 
+subjectPage.subjectNum = Number of the subject 
+subjectPage.subjectNum.placeholder = Must be between 1 and 999999999
+subjectPage.subjectNum.errorMessage = The number of the subject must be between 1 and 999999999
+messageErrorSubjectNum = The number of the subject already exists in the database 
+sitePage.ListOfSubjects.modify = Update the subject
+sitePage.ListOfSubjects = List of subjects
+
+/*---Event---*/
+subjectPage.addEvent = Create an event
+visitPage.visit = Visit 
+visitPage.visitLabel = Title of visit
+formPage.form = Form 
+formPage.formLabel = Title of form
+
+/*---DOV---*/
+dovPage.addDovTitle = Create a Date of visit
+dovPage.status = Realized 
+done = Done
+notDone = Not done
+dovPage.visitNd = Reason 
+dovPage.visitNd.placeholder = Must contain an explanation that the visit has not been realized
+messageErrorVisitNd = This field can only be completed if the visit has not been realized
+messageErrorVisitNdFalse = This field must be completed if the visit has not been realized
+dovPage.visitDate = Date of visit 
+messageErrorVisitDate = The visit date cannot be in the future
+application.create.dov = Create a Date of visit
+
