--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -38,6 +38,13 @@ menu.data.role.add = Ajouter un rôle
 menu.data.role.consult = Liste des rôles
 menu.data.rolePermission.add = Attribuer des permissions à un rôle
 menu.data.rolePermission.modify = Liste des rôles et leurs permissions
+menu.subject = Sujets
+menu.data.subject = Sujets
+menu.data.subject.add = Créer un sujet
+menu.data.subject.consult = Liste des sujets
+menu.data.event = Évènement
+menu.data.event.add = Créer un évènement
+menu.data.event.consult = Liste des évènements
 
 /*---Filter---*/
 listPage.messageErrorResearch = La recherche doit faire moins de 60 caractères et ne pas contenir de caractères spéciaux
@@ -52,6 +59,7 @@ user = L'utilisateur
 role = Le rôle
 listOfPermissionsOf = La liste des permissions
 listOfSites = La liste des sites
+subject =  Le sujet
 add = a bien été créé
 update = a bien été mis à jour
 
@@ -122,3 +130,43 @@ add.rolePermission = Créer la liste des permissions pour un rôle
 select.role = Sélectionner un rôle
 select.permission = Sélectionner la/les permission(s)
 update.rolePermission = Mettre à jour la liste des permissions pour un rôle
+
+/*---User Site---*/
+add.userSite = Créer la liste des sites pour un utilisateur
+select.user = Sélectionner un utilisateur 
+select.userName = Sélection un nom d'utilisateur 
+select.lastName = Sélectionner un nom 
+select.firstName = Sélectionner un prénom 
+select.site = Sélectionner un site 
+select.siteNum = Sélectionner un numéro de site hospitalier 
+select.siteName = Sélectionner un nom de site hospitalier 
+update.userSitePage = Mettre à jour la liste des sites pour un utilisateur 
+
+/*---Subject---*/
+subjectPage.addSubject = Créer un sujet
+subjectPage.subjectNum = Numéro du sujet 
+subjectPage.subjectNum.placeholder = Doit être compris entre 1 et 999999999
+subjectPage.subjectNum.errorMessage = Le numéro du sujet doit être compris entre 1 et 999999999
+messageErrorSubjectNum = Le numéro du sujet entré existe déjà dans la base de données 
+sitePage.ListOfSubjects.modify = Mettre à jour un sujet
+sitePage.ListOfSubjects = Liste des sujets
+
+/*---Event---*/
+subjectPage.addEvent = Créer un évènement
+visitPage.visit = Visite 
+visitPage.visitLabel = Intitulé de la visite
+formPage.form = Formulaire 
+formPage.formLabel = Intitulé du formulaire
+
+/*---DOV---*/
+dovPage.addDovTitle = Créer une date de visite
+dovPage.status = Réalisé 
+done = Fait
+notDone = Pas fait
+dovPage.visitNd = Raison 
+dovPage.visitNd.placeholder = Doit contenir l'explication que la visite n'a pas été faite
+messageErrorVisitNd = Ce champ ne peut être rempli que si la visite n'a pas été réalisée
+messageErrorVisitNdFalse = Ce champ doit être rempli si la visite n'a pas été réalisée
+dovPage.visitDate = Date de la visite 
+messageErrorVisitDate = La date de visite ne peut pas être dans le futur
+application.create.dov = Créer une date de visite
