MAJ 20/08 DOV OK avec audittrail

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -60,8 +60,11 @@ role = The role
 listOfPermissionsOf = The list of permissions
 listOfSites = The list of sites
 subject =  The subject
+dov = The Date of visit
+ic = The consent
 add = has been created
 update = has been updated
+for = for the
 
 /*---Site---*/
 sitePage.addSiteTitle = Create a hospital site
@@ -167,7 +170,22 @@ dovPage.visitNd = Reason
 dovPage.visitNd.placeholder = Must contain an explanation that the visit has not been realized
 messageErrorVisitNd = This field can only be completed if the visit has not been realized
 messageErrorVisitNdFalse = This field must be completed if the visit has not been realized
+messageErrorVisitDateMissing = The date must be entered if the visit has been realized
 dovPage.visitDate = Date of visit 
 messageErrorVisitDate = The visit date cannot be in the future
 application.create.dov = Create a Date of visit
+
+/*---IC---*/
+icPage.addIcTitle = Create a consent
+icPage.visitDate = Date of consent 
+messageErrorIcDate = The date of consent cannot be in the future
+icPage.protocoleVersion = Protocol version 
+icPage.protocoleVersion.placeholder = Must contain the protocol version
+icPage.protocoleVersion.errorMessage = This field cannot be empty
+icPage.status = Subject eligibility 
+eligible = Eligible
+notEligible = Not eligible
+messageErrorIeNotMeet = It is not possible to be eligible with an exclusion criterion
+messageErrorIeNotMeetNa = It is not possible to be ineligible using this criterion
+icPage.ie_not_met = Criterion 
 
