--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -60,8 +60,11 @@ role = Le rôle
 listOfPermissionsOf = La liste des permissions
 listOfSites = La liste des sites
 subject =  Le sujet
+dov = La date de visite
+ic = Le consentement
 add = a bien été créé
 update = a bien été mis à jour
+for = pour le
 
 /*---Site---*/
 sitePage.addSiteTitle = Créer un site hospitalier
@@ -167,6 +170,21 @@ dovPage.visitNd = Raison
 dovPage.visitNd.placeholder = Doit contenir l'explication que la visite n'a pas été faite
 messageErrorVisitNd = Ce champ ne peut être rempli que si la visite n'a pas été réalisée
 messageErrorVisitNdFalse = Ce champ doit être rempli si la visite n'a pas été réalisée
+messageErrorVisitDateMissing = La date doit être renseignée si la visite a été réalisée
 dovPage.visitDate = Date de la visite 
 messageErrorVisitDate = La date de visite ne peut pas être dans le futur
 application.create.dov = Créer une date de visite
+
+/*---IC---*/
+icPage.addIcTitle = Créer un consentement
+icPage.visitDate = Date du consentement 
+messageErrorIcDate = La date du consentement ne peut pas être dans le futur
+icPage.protocoleVersion = Version du protocole 
+icPage.protocoleVersion.placeholder = Doit contenir la version du protocole
+icPage.protocoleVersion.errorMessage = Ce champ ne peut pas être vide
+icPage.status = Éligibilité du sujet 
+eligible = Éligible
+notEligible = Pas éligible
+messageErrorIeNotMeet = Il n'est pas possible d'être éligible avec un critère d'exclusion
+messageErrorIeNotMeetNa = Il n'est pas possible d'être non éligible avec ce critère
+icPage.ie_not_met = Critère 
