MAJ 21/08 DOV OK + DM OK

--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -62,6 +62,7 @@ listOfSites = La liste des sites
 subject =  Le sujet
 dov = La date de visite
 ic = Le consentement
+dm = L'information démographique
 add = a bien été créé
 update = a bien été mis à jour
 for = pour le
@@ -188,3 +189,12 @@ notEligible = Pas éligible
 messageErrorIeNotMeet = Il n'est pas possible d'être éligible avec un critère d'exclusion
 messageErrorIeNotMeetNa = Il n'est pas possible d'être non éligible avec ce critère
 icPage.ie_not_met = Critère 
+
+/*---DM---*/
+dmPage.addDmTitle = Créer une information démographique
+dmPage.year = Année de naissance 
+dmPage.year.placeholder = Doit être 1920 et 2005
+dmPage.year.errorMessage = L'année de naissance doit entre 1920 et 2005
+dmPage.sex = Sexe 
+dmPage.ethnicity = Ethnicité 
+dmPage.culture = Culture 
