--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -62,6 +62,7 @@ listOfSites = The list of sites
 subject =  The subject
 dov = The Date of visit
 ic = The consent
+dm = The information of Demography
 add = has been created
 update = has been updated
 for = for the
@@ -188,4 +189,13 @@ notEligible = Not eligible
 messageErrorIeNotMeet = It is not possible to be eligible with an exclusion criterion
 messageErrorIeNotMeetNa = It is not possible to be ineligible using this criterion
 icPage.ie_not_met = Criterion 
+
+/*---DM---*/
+dmPage.addDmTitle = Create demographic information
+dmPage.year = Year of birth 
+dmPage.year.placeholder = Must be between 1920 and 2005
+dmPage.year.errorMessage = The year of birth must be between 1920 et 2005
+dmPage.sex = Sex 
+dmPage.ethnicity = Ethnicity 
+dmPage.culture = Culture 
 
