MAJ 23/08 VS en cours

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -63,6 +63,7 @@ subject =  The subject
 dov = The Date of visit
 ic = The consent
 dm = The information of Demography
+vs = The information of Vital Signs
 add = has been created
 update = has been updated
 for = for the
@@ -154,6 +155,7 @@ subjectPage.subjectNum.errorMessage = The number of the subject must be between 
 messageErrorSubjectNum = The number of the subject already exists in the database 
 sitePage.ListOfSubjects.modify = Update the subject
 sitePage.ListOfSubjects = List of subjects
+sitePage.ListOfSubjects.Consult = Consult the data of the subject
 
 /*---Event---*/
 subjectPage.addEvent = Create an event
