--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -63,6 +63,7 @@ subject =  Le sujet
 dov = La date de visite
 ic = Le consentement
 dm = L'information démographique
+vs = L'information des signes vitaux
 add = a bien été créé
 update = a bien été mis à jour
 for = pour le
@@ -154,6 +155,7 @@ subjectPage.subjectNum.errorMessage = Le numéro du sujet doit être compris entre
 messageErrorSubjectNum = Le numéro du sujet entré existe déjà dans la base de données 
 sitePage.ListOfSubjects.modify = Mettre à jour un sujet
 sitePage.ListOfSubjects = Liste des sujets
+sitePage.ListOfSubjects.Consult = Consulter les données du sujet
 
 /*---Event---*/
 subjectPage.addEvent = Créer un évènement
