--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -201,3 +201,43 @@ dmPage.sex = Sex
 dmPage.ethnicity = Ethnicity 
 dmPage.culture = Culture 
 
+/*---VS---*/
+vsPage.addVsTitle =
+vsPage.status =
+vsPage.vsNd =
+vsPage.vsNd.placeholder =
+vsPage.heightNd =
+vsPage.height =
+vsPage.height.placeholder =
+vsPage.height.errorMessage =
+vsPage.weightNd =
+vsPage.height.unit =
+vsPage.weight =
+vsPage.weight.placeholder =
+vsPage.weight.errorMessage =
+vsPage.weight.unit =
+vsPage.bpNd =
+vsPage.input_sbp =
+vsPage.input_sbp.placeholder =
+vsPage.input_sbp.errorMessage =
+vsPage.input_dbp =
+vsPage.input_dbp.placeholder =
+vsPage.input_dbp.errorMessage =
+vsPage.hrNd =
+vsPage.input_hr =
+vsPage.input_hr.placeholder =
+vsPage.input_hr.errorMessage =
+vsPage.rrNd =
+vsPage.input_rr =
+vsPage.input_rr.placeholder =
+vsPage.input_rr.errorMessage =
+vsPage.tempNd =
+vsPage.input_temp =
+vsPage.input_temp.placeholder =
+vsPage.input_temp.errorMessage =
+vsPage.tempU =
+vsPage.tempRoute =
+vsPage.oxyNd =
+vsPage.input_oxy =
+vsPage.input_oxy.placeholder =
+vsPage.input_oxy.errorMessage =
