MAJ 27/08 Vs et Te en cours

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -241,3 +241,15 @@ vsPage.oxyNd =
 vsPage.input_oxy =
 vsPage.input_oxy.placeholder =
 vsPage.input_oxy.errorMessage =
+
+/*---TE---*/
+tePage.addTeTitle =
+tePage.status =
+tePage.visitNd =
+tePage.visitNd.placeholder =
+tePage.visitDate =
+tePage.target.lesion =
+tePage.non.target.lesion =
+tePage.new.lesion.status =
+tePage.overall.response =
+application.create.te =
